# Omni

./: Issues.txt  LICENSE  OmniREPL.hs  StepByStep.txt  backup.txt  brokenTypecheck.txt  brokenTypecheck2.txt  example.java  example.py  figure_4_1.java  figure_4_1.py  functions.java  functions.py  javaTest.jav  javaTest.py  large.py  monad.java  monad.py  oldElabAssign.txt  omni.cabal  omni.java  omni.py  omni_history.txt  py.java  py.py  pyTest.jav  pyTest.py  quirks.java  quirks.py  quirksSolutions.java  test.java  test.py  testingJavaFile.java  typecheck-copy.txt  typecheckCopy.txt
Deprecated/: Inference.hs  Java.hs  Python.hs  Typecheck.hs
Guide Files/: 10-static-types.lhs  MComp.hs  Parsing2.hs  QuiltParser.hs  sudoku.py
GuideFiles/: 09-dynamic-types.lhs  11-IMP.lhs  MComp.hs  PythonAST.hs  Quilt.hs  QuiltREPL.hs
Learning Files/: f-undecidable-final-LICS.ps
Omni/: Data.hs  Java.hs  Pretty.hs  Python.hs  Typecheck.hs  Typestuff.hs
Omni/Java/: Pretty.hs  Print.hs  Syntax.hs
Omni/Python/: Pretty.hs  Print.hs  Syntax.hs
Omni/Typecheck/: Constraints.hs  Data.hs  Elaborate.hs  Inference.hs  Monadic.hs
SCtx Defense/: nosctx.java  nosctx.py  sctx.java  sctx.py
TestFiles/: elab.java  elab.py  example.java  example.py  fdecl.java  fdecl.py  func.java  func.py  monad.java  monad.py  omni.java  omni.py  py.java  py.py  quirks.java  quirks.py  quirksSolutions.java  scope.java  scope.py  string.java  string.py  test.java  test.py  test1.java  test1.py  test2.java  test2.py  test3.java  test3.py  test4.java  test4.py  test5.java  test5.py  test6.java  test6.py
(+26 files in other folders)
